# the-unlocker

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ADR_0001_API_GATEWAY.md  ADR_0002_DATABASE_OWNERSHIP.md  ADR_0003_RELEASE_PIPELINE.md  ARCHITECTURE.md  BACKEND.md  CLI.md  CODE_OF_CONDUCT.md  CONTAINER_RELEASE.md  CONTRIBUTING.md  DATABASE_OWNERSHIP.md  FRONTEND.md  INDEX.md  LICENSE  MAJOR_PLATFORM_UPGRADES.md  MODPACKS.md  MOD_SCHEMA.md  PLATFORM_PHASE_6.md  PRODUCT_UPGRADES.md  PROJECT_STRUCTURE.md  README.md  REGISTRY.md  ROADMAP.md  SECURITY.md  STACK.md  SUPPORT.md  TheUnlocker.Templates.csproj  TheUnlockerWorkspace.slnx  justfile
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
SampleMod/: HelloWorldMod.cs  SampleMod.csproj  mod.json  repository-index.sample.json
TheUnlocker.Adapter.Minecraft/: MinecraftGameAdapter.cs
TheUnlocker.Adapter.TestKit/: AdapterFixtureFactory.cs  TheUnlocker.Adapter.TestKit.csproj
TheUnlocker.Adapter.Unity/: TheUnlocker.Adapter.Unity.csproj  UnityGameAdapter.cs
TheUnlocker.Adapter.Unreal/: UnrealGameAdapter.cs
TheUnlocker.ApiDocs.Web/: Program.cs  TheUnlocker.ApiDocs.Web.csproj
TheUnlocker.GameAdapters.Abstractions/: IGameAdapter.cs  TheUnlocker.GameAdapters.Abstractions.csproj
TheUnlocker.Marketplace.Web/: Program.cs  TheUnlocker.Marketplace.Web.csproj
TheUnlocker.ModPackager/: Program.cs  TheUnlocker.ModPackager.csproj
TheUnlocker.Modding.Abstractions/: CapabilityToken.cs  IAssetImporterRegistry.cs  (+18 more)
backend/rust-worker/: Cargo.toml  Dockerfile
backend/rust-worker/src/: main.rs
(+216 files in other folders)
