[package]
name = "theunlocker-rust-worker"
version = "1.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
